styled-select dropdown arrow fixed for ie > 9 and firefox. console.log problem fixed for ie (disabled when log-window not open).

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -247,17 +247,24 @@ strong {
     height: 34px;
     background: url(../images/down-arrow.jpg) no-repeat right #eceeee;
     -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
     background-position-x: 234px;
     cursor: pointer;
     float: right; 
     margin-left: 2em;
 }
 
+.styled-select select::-ms-expand {
+    display: none;
+}
 
 .styled-input input {
   background: #fff;
   border-radius: 0 !important;
   -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
   border: 0 !important;
   box-shadow: none !important;
 }
