--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,5 @@
 html { 
-  background: url(../background.png) no-repeat center center fixed;
+  background: url(../images/background.png) no-repeat center center fixed;
 
   -webkit-background-size: cover;
   -moz-background-size: cover;
